--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DhirajSurana.github.io/react-whatsapp-clone",
+  "homepage": "https://dhirajsurana.github.io/React-Whatsapp-Clone",
   "name": "whatsapp-clone",
   "version": "0.1.0",
   "private": true,
